style.css
@import url('https://fonts.googleapis.com/css?family=Quicksand');
@import url('https://fonts.googleapis.com/css?family=Work+Sans:200');

h1 {
	text-align: center;
	font-family: 'Work Sans', sans-serif;
	font-size: 50px;
	margin-top: -15px;
}

h2 {
	margin-top: 25px;
	text-align: center;
	font-family: 'Work Sans', sans-serif;
}

img{
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: -65px;
}

p{
	letter-spacing: 3px;
	line-height: 27px;
	font-size: 15px;
	width: 550px;
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	font-family: 'Quicksand', sans-serif;
}

